<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Problem1Activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/problem_1"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/problem1Question1"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <RadioButton
                android:id="@+id/radiobutton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choice_1"
                />

            <RadioButton
                android:id="@+id/radiobutton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choice_2"
                />

            <RadioButton
                android:id="@+id/radiobutton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choice_3"
                />
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/problem1Question2"
            />
        
        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_1"
            />

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_2"
            />

        <CheckBox
            android:id="@+id/checkbox3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_3"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonReset"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickButtonReset"
                android:text="@string/reset"/>

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickButtonSubmit"
                android:text="@string/submit"/>

        </LinearLayout>


    </LinearLayout>


</ScrollView>